# clean_energy_graveyard

./: README.md
archive/backend_v1/src/: pyproject.toml
archive/backend_v1/src/v2_refactor/outputs/: New Raspberry Pi Pico Project - Wokwi Simulator.html  hampshire_2025.csv
backend/: 01_dataset_retrieval.ipynb  03_agent_tool_use.ipynb  eval_log.json  main.py
backend/outputs/: hampshire-2025-01-01.csv  recent_projects.csv
backend/src/: clients.py  prompts.py
backend/tests/: test_client.py
backend_v2/: .env.example  01_dataset_retrieval.ipynb  02_model_reasoning.ipynb  03_agent_tool_use.ipynb  CLAUDE.md  config.py  main.py  pyproject.toml  schemas.py
backend_v2/agents/: base.py  scraper_agent.py
backend_v2/notebooks/: main.ipynb
backend_v2/processors/: __init__.py  repd_processor.py
backend_v2/scripts/: scan_hampshire.py
backend_v2/src/: clients.py  prompts.py
backend_v2/src/agents/: __init__.py  base.py  gemini_agent.py
backend_v2/src/processors/: base.py  repd_processor.py
backend_v2/tests/: test_client.py
frontend/: package-lock.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/lib/: Map.svelte
frontend/src/lib/utils/: mapUtils.js
repd_map/src/lib/: Map.svelte
