[project]
name = "repd-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pyproj>=3.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "fastmcp>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.79.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
pdf = ["markitdown>=0.1", "pypdf>=4.0"]
browser = ["playwright>=1.48"]
geo = ["geopandas>=1.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
nimby-batch = "scripts.run_nimby:main"
